--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,19 @@
 spring.application.name=ProductService
+server.port=8086
+
+# SQL configuration
+spring.datasource.url=jdbc:mysql://localhost:3307/products_db
+spring.datasource.username=root
+spring.datasource.password=srinivasH53@
+
+# JPA configuration
+spring.jpa.show-sql=true
+spring.jpa.hibernate.ddl-auto=update
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL8Dialect
+
+spring.elasticsearch.uris=http://localhost:9200
+
+spring.security.oauth2.resourceserver.jwt.issuer-uri=http://auth-server:8085
+spring.security.oauth2.resourceserver.jwt.jwk-set-uri= http://auth-server:8085/oauth2/jwks
+
+
